# xmms2hotkey

./: .gitignore  ChangeLog  Makefile.am  README  TODO  configure.ac  xmms2hotkey.conf.sample
src/: Makefile.am  xmms2hotkey.cpp
